# newsletter-scanner

./: .gitignore  Dockerfile  deploy.sh  pyproject.toml  requirements.txt  run_scan.bat  task_scheduler.xml
config/: config.cloud.yaml  keywords.yaml
src/: cli.py  config_loader.py
src/fetchers/: base.py  google_news.py  google_trends.py  hackernews.py  linkedin_rss.py  reddit.py
src/processing/: categorizer.py  clustering.py  extractor.py  scorer.py  summarizer.py
src/reporting/: console.py  email_report.py  export.py
src/storage/: bigquery_dedup.py  fetch_cache.py  history.py  store.py
